--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -7,7 +7,7 @@
 <div>
   <% if @error %>
     <p><%= @error %></p>
-  <% elsif @venues %>
+  <% elsif !!@venues %>
     <ul>
     <% @venues.each do |venue| %>
       <li>
